Bug 167222 - FILEOPEN DOCX Floating table rendered at the top of the next page instead of the bottom
Summary: FILEOPEN DOCX Floating table rendered at the top of the next page instead of ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0 target:25.8.0.2 target:...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2025-06-25 21:31 UTC by Gabor Kelemen (Collabora)
Modified: 2025-08-15 06:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file with floating table with negative vertical positioning (32.08 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-06-25 21:31 UTC, Gabor Kelemen (Collabora)
Details
The document in Word 2013 and Writer master side by side (63.73 KB, image/png)
2025-06-25 21:31 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-06-25 21:31:09 UTC
Created attachment 201478 [details]
Example file with floating table with negative vertical positioning

Attached example document contains a floating table at the bottom of the first page in Word.
When opened in Writer, it is rendered at the top of the next page, changing layout significantly.

1. Open attached document
-> Floating table is incorrectly rendered compared to Word 2013 or 2016.

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6faa7e6f7bae3e6a613b4f4b7cee4a9c6d2b7aae
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

Seems to have started in 7.4 with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3eb6d764b3023500f2299d36bf1860bc8e67db9f

author	Miklos Vajna <vmiklos@collabora.com>	2022-01-21 10:06:02 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2022-01-21 12:31:24 +0100
commit 3eb6d764b3023500f2299d36bf1860bc8e67db9f (patch)

DOCX import: floating table with negative top margin has to be a fly frame
Comment 1 Gabor Kelemen (Collabora) 2025-06-25 21:31:32 UTC
Created attachment 201479 [details]
The document in Word 2013 and Writer master side by side
Comment 2 Gabor Kelemen (Collabora) 2025-06-25 21:32:05 UTC
Adding CC to: Miklos Vajna
Comment 3 Commit Notification 2025-07-14 18:04:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/77f0dc4347b8802c56121ca1c5ef59209970214a

tdf#167222 sw floattable: allow split of fly and its keep-together anchor text

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-07-15 09:12:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/7e97e094739901647c4ff59bccfb86bc8bc70d90

tdf#167222 sw floattable: allow split of fly and its keep-together anchor text

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-07-17 14:35:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/44c0872bf5f1b658b126d8d928c795e74c0e8ecd

Related: tdf#167222 sw floattable: fix split of fly and its 'keep' anchor text

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-07-28 15:46:03 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1522e2b1985f6ebdbf442bdbd55cbc5f2b85dd6

Related: tdf#167222 sw floattable: fix split of fly and its heading text w/ ftn

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-07-31 01:45:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e03da71738c72bbaecb824b4ba356a0a9923a0ff

Related: tdf#167222 sw floattable: fix split of fly and heading text fit check

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-07 11:56:36 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/36a9c3dfc80e0f30ef17684cb2427daa286daf90

Related: tdf#167222 sw floattable: fix split of fly and its 'keep' anchor text

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-07 11:56:39 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/50f86a8ead1186f6faa162b7a175b0bf3b42eb29

Related: tdf#167222 sw floattable: fix split of fly and its heading text w/ ftn

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-07 11:57:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fb6334d69e3760b7e468ed22deee5eeb515002ab

Related: tdf#167222 sw floattable: fix split of fly and heading text fit check

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.