sw/source/core/text/widorp.cxx
@@ -74,6 +74,14 @@ SwTextFrameBreak::SwTextFrameBreak( SwTextFrame *pNewFrame, const SwTwips nRst )
     }
     m_bKeep = m_bKeep || !m_pFrame->GetTextNodeForParaProps()->GetSwAttrSet().GetSplit().GetValue() ||
         m_pFrame->GetTextNodeForParaProps()->GetSwAttrSet().GetKeep().GetValue();
+
+    if (m_bKeep && m_pFrame->HasSplitFlyDrawObjs())
+    {
+        // Ignore keep-together and keep-with-next if this is an anchor for a floating table. It's
+        // OK to split the text frame into two, to separate the floating table and the anchor text.
+        m_bKeep = false;
+    }
+
     m_bBreak = false;
 
     if( !m_nRstHeight && !m_pFrame->IsFollow() && m_pFrame->IsInFootnote() && m_pFrame->HasPara() )
